--- a/web/static/index.html
+++ b/web/static/index.html
@@ -14,6 +14,8 @@
     <!-- Bootstrap core CSS -->
 <link href="./index_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+<link href="./index_files/pagination.css" rel="stylesheet" crossorigin="anonymous">
+
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/4.5/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="https://getbootstrap.com/docs/4.5/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -122,14 +124,7 @@
         <tbody id="results-body">
         </tbody>
       </table>
-      <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
+      <div id="pagination-container"></div>
       </nav>
     </div>
  </div>
@@ -141,18 +136,50 @@
   </div>
 </footer>
 <script src="./index_files/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="./index_files/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
+      <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="./index_files/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="./index_files/pagination.min.js" crossorigin="anonymous"></script>
 
 <script>
   function addToken() {
     $("#search-tokens").append($("#token-template").html());
   }
   $("#add-token").click(() => addToken());
+  // 默认有一个
   addToken();
+
   function removeToken(e) {
     $(e).parent().parent().remove()
   }
+
+
+  function searchFrom(tokens, from, first) {
+    $("#results-body").children().empty();
+    $.post("/search", {tokens: tokens, from: from}, function(data) {
+      console.log(data);
+      data.hits.forEach(({content, score}, i) => {
+        $("#results-body").append(`
+          <tr>
+            <th scope="row">${from + i + 1}</th>
+            <td>${content}</td>
+            <td>${score}</td>
+          </tr>
+        `)
+      })
+      if (first) {
+        $('#pagination-container').pagination({
+            dataSource: Array.from({length: data.total}, (x, i) => i),
+            pageSize: 10,
+            showGoInput: true,
+            showGoButton: true,
+            callback: function(data, pagination) {
+              if (!pagination.direction) return;
+              searchFrom(tokens, (pagination.pageNumber - 1) * 10, false);
+            }
+        })
+      }
+    })
+  }
+
   $("#perform-search").click(() => {
     $("#results-body").children().empty();
     let tokens = Array.from($("#search-tokens").children(".input-group"), x => {
@@ -161,20 +188,7 @@
       let pos = x.find("option:selected").val();
       return [token, pos];
     });
-    console.log(tokens);
-    $.post("/search", {tokens: tokens}, function(data) {
-      console.log(data);
-      for (let {score, content} of data.results) {
-        console.log(score, content);
-        $("#results-body").append(`
-          <tr>
-            <th scope="row">1</th>
-            <td>${content}</td>
-            <td>${score}</td>
-          </tr>
-        `)
-      }
-    })
+    searchFrom(tokens, 0, true);
   });
 </script>
 
